[package]
name = "scripts"
version = "0.1.0"
edition = "2024"

# 対象ディレクトリのファイル読み込みとセーブ
[[bin]]
name = "template"
path = "bin/00_template.rs"

# AIによるデータ生成
[[bin]]
name = "create_questions"
path = "bin/0_create_questions.rs"

# AI生成データを型にバインドして保存する
[[bin]]
name = "json_read_to_struct"
path = "bin/1_json_read_to_struct.rs"

# AI生成データのバリデーション (stage 1.5)
# 各Questionの選択肢数、回答範囲、必須フィールド等を検証
[[bin]]
name = "validate_questions"
path = "bin/1_5_validate_questions.rs"

# 選択肢シャッフル（正解位置の偏り修正）
[[bin]]
name = "shuffle_answers"
path = "bin/1_7_shuffle_answers.rs"

# SubQuestionのsentenceをキーにした重複排除
# Questionの新配列と重複の配列を保持
# 保存は任意
[[bin]]
name = "duplicate"
path = "bin/2_duplicate.rs"

# id, child.idのナンバリング
[[bin]]
name = "numbering"
path = "bin/3_numbering.rs"

# レベル分け (N1, N2, N3, N4, N5) => (1, 2, 3, 4, 5)
[[bin]]
name = "leveling"
path = "bin/4_leveling.rs"

# カテゴリ分け 各カテゴリを一意の数字に変換
[[bin]]
name = "to_meta"
path = "bin/5_categories_to_meta.rs"

# データベースへの保存
[[bin]]
name = "questions_to_database"
path = "bin/99_questions_to_database.rs"

# カテゴリメタデータのデータベースへの保存
[[bin]]
name = "categories_to_database"
path = "bin/99_categories_to_database.rs"

# 旧データ削除→新データ投入
[[bin]]
name = "clear_and_replace"
path = "bin/99_clear_and_replace.rs"

# 投票データ集計・低品質問題リスト化・削除
[[bin]]
name = "review_votes"
path = "bin/review_votes.rs"

# DB状態確認ユーティリティ
[[bin]]
name = "check_db"
path = "bin/check_db.rs"

[dependencies]
chrono = "0.4.40"
env_logger = "0.11.6"
google-generative-ai-rs = { version = "0.3.4", features = ["beta"] }
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }

firestore = "0.44"
dotenv = "0.15.0"
uuid = { version = "1.15.1", features = ["v4"] }
rand = "0.9"
tokio-stream = "0.1"
futures-util = "0.3"
